# moves.rs

./: .gitattributes  .gitignore  AUDIT-canonical-fidelity.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOLT_REMOTE.md  README.md  SECURITY.md  deny.toml  manifest  moves-rust-migration-plan.md  rust-toolchain.toml
crates/moves-avft/: Cargo.toml
crates/moves-avft/src/: control_strategy.rs  csv_io.rs  error.rs  import.rs  lib.rs  model.rs  parquet_io.rs  spec.rs  tool.rs
crates/moves-calculator-info/: Cargo.toml
crates/moves-calculator-info/src/: chain.rs  directives.rs  error.rs  java.rs  lib.rs  loop_meta.rs  main.rs  output.rs
crates/moves-calculator-info/tests/: chain_reconstruct_cli.rs
crates/moves-calculators/: Cargo.toml
crates/moves-calculators/src/: default_db_setup.rs  error.rs  lib.rs  meteorology.rs  tank_fuel_generator.rs  tank_temperature_generator.rs  wiring.rs
crates/moves-calculators/src/calculators/: airtoxics.rs  airtoxicsdistance.rs  basicbraketirepm.rs  basicstartpm.rs  ch4n2o_running_start.rs  co2ae_running_start_extended_idle.rs  (+21 more)
crates/moves-calculators/tests/: baseratecalculator.rs  baserategenerator.rs  calculator_integration.rs  distance_calculator_pilot.rs  fueleffectsgenerator.rs  generator_integration.rs
crates/moves-cli/: Cargo.toml
crates/moves-cli/src/: convert.rs  import.rs  lib.rs  main.rs  run.rs
crates/moves-cli/tests/: benchmark_suite.rs  concurrency_correctness.rs  concurrency_tuning.rs  end_to_end.rs  full_suite_regression.rs  perf_baseline.rs
crates/moves-control-strategy-validation/: Cargo.toml
crates/moves-control-strategy-validation/src/: lib.rs
crates/moves-control-strategy-validation/tests/: avft_validation.rs  cross_strategy.rs  nonroad_retrofit_validation.rs  onroad_retrofit_validation.rs  rop_validation.rs
crates/moves-data/: Cargo.toml
crates/moves-data-default/: Cargo.toml
crates/moves-data-default/src/: error.rs  filter.rs  lib.rs  manifest.rs  scan.rs  typed.rs
crates/moves-data-default/tests/: end_to_end.rs
crates/moves-data/src/: error.rs  lib.rs  output_schema.rs  pollutant.rs  pollutant_process.rs  process.rs  road_type.rs  source_type.rs
crates/moves-data/tests/: canonical_catalog.rs
crates/moves-default-db-convert/: Cargo.toml
crates/moves-default-db-convert/src/: convert.rs  error.rs  lib.rs  main.rs  manifest.rs  parquet_writer.rs  partition.rs  plan.rs  tsv.rs  types.rs  validate.rs
crates/moves-default-db-convert/tests/: end_to_end.rs
crates/moves-fixture-capture/: Cargo.toml
crates/moves-fixture-capture/src/: capture.rs  coverage.rs  error.rs  lib.rs  main.rs  provenance.rs  runspec.rs  tabular.rs  trace.rs  tree.rs
crates/moves-fixture-capture/tests/: coverage_cli.rs  end_to_end.rs  fixture_catalog.rs
crates/moves-framework/: Cargo.toml
crates/moves-framework/docs/: dataframe-store-rfc.md
crates/moves-framework/src/: aggregation.rs  calculator.rs  engine.rs  error.rs  execution_db.rs  execution_location_producer.rs  execution_runspec.rs  executor.rs  input_data_manager.rs  lib.rs  master_loop.rs  output_aggregate.rs  output_processor.rs  registry.rs
crates/moves-framework/tests/: memory_pressure.rs  parquet_roundtrip.rs
crates/moves-fuel-control/: Cargo.toml
crates/moves-fuel-control/src/: lib.rs
crates/moves-import-lev/: Cargo.toml
crates/moves-import-lev/src/: csv_reader.rs  error.rs  importer.rs  lib.rs  parquet_writer.rs  schema.rs  validate.rs
crates/moves-import-lev/tests/: end_to_end.rs
crates/moves-importer/: Cargo.toml
crates/moves-importer-county/: Cargo.toml
crates/moves-importer-county/src/: age_distribution.rs  hotelling.rs  lib.rs  source_type_population.rs  starts.rs  zone.rs  zone_road_type.rs
crates/moves-importer-county/tests/: end_to_end.rs
crates/moves-importer-pdb/: Cargo.toml
crates/moves-importer-pdb/src/: csv_reader.rs  error.rs  filter.rs  lib.rs  manifest.rs  parquet_writer.rs  schema.rs  validate.rs
crates/moves-importer-pdb/tests/: end_to_end.rs
crates/moves-importer-validation/: Cargo.toml  README.md
crates/moves-importer-validation/src/: lib.rs
crates/moves-importer-validation/tests/: importer_validation.rs
crates/moves-importer/src/: descriptor.rs  error.rs  filter.rs  importer.rs  lib.rs  reader.rs  validator.rs  writer.rs
crates/moves-nonroad/: ARCHITECTURE.md  Cargo.toml
crates/moves-nonroad-import/: Cargo.toml
crates/moves-nonroad-import/src/: convert.rs  csv.rs  error.rs  importer.rs  lib.rs  manifest.rs  parquet_writer.rs  schema.rs
crates/moves-nonroad-import/tests/: end_to_end.rs
crates/moves-nonroad-retrofit/: Cargo.toml
crates/moves-nonroad-retrofit/src/: control_strategy.rs  lib.rs
crates/moves-nonroad/src/: allocation.rs  common.rs  driver.rs  emissions.rs  error.rs  geography.rs  input.rs  lib.rs  main.rs  main_loop.rs  output.rs  population.rs
crates/moves-nonroad/tests/: nonroad_fidelity.rs  production_executor_smoke.rs
crates/moves-onroad-retrofit/: Cargo.toml
crates/moves-onroad-retrofit/src/: control_strategy.rs  error.rs  lib.rs  model.rs
crates/moves-rate-of-progress/: Cargo.toml
crates/moves-rate-of-progress/src/: control_strategy.rs  csv_io.rs  error.rs  lib.rs  model.rs
crates/moves-runspec/: Cargo.toml
crates/moves-runspec/src/: error.rs  lib.rs  model.rs  parse.rs  serialize.rs  toml_format.rs  types.rs  xml_format.rs
crates/moves-runspec/tests/: round_trip.rs  roundtrip.rs
crates/moves-snapshot/: Cargo.toml
crates/moves-snapshot/src/: bundle.rs  diff.rs  error.rs  format.rs  lib.rs  main.rs  manifest.rs  output_compare.rs  snapshot.rs  table.rs  tolerance.rs
crates/moves-snapshot/tests/: cli_compare_canonical.rs  cli_diff.rs
crates/moves-source-control/: Cargo.toml
crates/moves-source-control/src/: lib.rs
crates/moves-sql-macros/: Cargo.toml
crates/moves-sql-macros/src/: config.rs  error.rs  expander.rs  lib.rs  main.rs  sections.rs
crates/moves-sql-macros/tests/: cli.rs  expand_pipeline.rs
crates/moves-wasm/: Cargo.toml
crates/moves-wasm/demo/: README.md  index.html  worker.js
crates/moves-wasm/src/: default_db.rs  lib.rs
(+5067 files in other folders)
