[workspace]
members = ["crates/moves-snapshot"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/EarthSciML/moves.rs"
rust-version = "1.78"

[workspace.dependencies]
arrow = "55"
bytes = "1"
parquet = "55"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tempfile = "3"
