[workspace]
members = [
    "crates/moves-avft",
    "crates/moves-calculator-info",
    "crates/moves-calculators",
    "crates/moves-cli",
    "crates/moves-data",
    "crates/moves-data-default",
    "crates/moves-default-db-convert",
    "crates/moves-fixture-capture",
    "crates/moves-framework",
    "crates/moves-import-lev",
    "crates/moves-nonroad",
    "crates/moves-runspec",
    "crates/moves-snapshot",
    "crates/moves-sql-macros",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/EarthSciML/moves.rs"
rust-version = "1.78"

[workspace.dependencies]
arrow = "55"
bytes = "1"
clap = { version = "4", features = ["derive"] }
parquet = "55"
phf = { version = "0.11", features = ["macros"] }
polars = { version = "0.53", default-features = false, features = ["lazy", "parquet"] }
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tempfile = "3"
toml = "0.8"
