[package]
name = "moves-calculator-info"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Calculator-chain reconstruction: parse CalculatorInfo.txt + MOVES Java source into a Phase-2-ready execution-DAG JSON (Phase 1)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "moves-chain-reconstruct"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
