[package]
name = "moves-calculators"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "MOVES onroad emission calculators and generators (Phase 3)."

[lib]
path = "src/lib.rs"

[dependencies]
moves-calculator-info = { path = "../moves-calculator-info" }
moves-data = { path = "../moves-data" }
moves-framework = { path = "../moves-framework" }
polars = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Task 44 generator integration-validation harness (tests/generator_integration.rs).
# `moves-runspec` parses the Phase 0 fixture RunSpecs; `moves-snapshot` is the
# canonical-capture format the harness diffs generator output against;
# `serde`/`serde_json` serialise the validation report for the CI artifact;
# `tempfile` backs the machinery tests. Dev-only — the runtime library is
# untouched.
moves-runspec = { path = "../moves-runspec" }
moves-snapshot = { path = "../moves-snapshot" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
