[package]
name = "moves-data-default"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Lazy-loading reader over the converted MOVES default-DB Parquet layout (Phase 4 Task 82)."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# moves-default-db-convert and polars/parquet have native C deps (zstd-sys, etc.)
# that refuse to compile for wasm32-unknown-unknown.  Gate both to native-only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
moves-default-db-convert = { path = "../moves-default-db-convert" }
polars = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
polars = { version = "0.53", default-features = false }  # polars-core only — no lazy/parquet → no mio

[dev-dependencies]
moves-default-db-convert = { path = "../moves-default-db-convert" }
tempfile = { workspace = true }
