[package]
name = "moves-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MOVES data plane: schema-aware DataFrameStore and lookup tables (Phase 2/4 skeleton)."

[lib]
path = "src/lib.rs"

[dependencies]
phf = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
