[package]
name = "moves-fixture-capture"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Fixture-run capture: convert MOVES intermediate dumps into a deterministic snapshot (Phase 0)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "moves-fixture-capture"
path = "src/main.rs"

[[bin]]
name = "moves-coverage"
path = "src/bin/moves-coverage.rs"

[dependencies]
clap = { workspace = true }
moves-snapshot = { path = "../moves-snapshot" }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
