[package]
name = "moves-framework"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "MOVES execution runtime: ExecutionRunSpec, MasterLoop, scheduler (Phase 2 skeleton)."

[lib]
path = "src/lib.rs"

[dependencies]
arrow = { workspace = true }
moves-calculator-info = { path = "../moves-calculator-info" }
moves-data = { path = "../moves-data" }
moves-runspec = { path = "../moves-runspec" }
parquet = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
moves-calculator-info = { path = "../moves-calculator-info" }
tempfile = { workspace = true }
