[package]
name = "moves-fuel-control"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "FuelControlStrategy internal control strategy — no-op port of gov.epa.otaq.moves.master.implementation.general.FuelControlStrategy."

[lib]
path = "src/lib.rs"

[dependencies]
moves-framework = { path = "../moves-framework" }

[dev-dependencies]
polars = { workspace = true }
