[package]
name = "moves-importer-county"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "County Database (CDB) importers — Phase 4 Task 83."

[lib]
path = "src/lib.rs"

[dependencies]
arrow = { workspace = true }
moves-importer = { path = "../moves-importer" }

[dev-dependencies]
bytes = { workspace = true }
moves-default-db-convert = { path = "../moves-default-db-convert" }
parquet = { workspace = true }
tempfile = { workspace = true }
