[package]
name = "moves-importer-pdb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Project-scale (PDB) input-database importer: CSV → validated Parquet matching the default-DB schema (Phase 4 Task 84)."

[lib]
path = "src/lib.rs"

[dependencies]
arrow = { workspace = true }
csv = "1"
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
parquet = { workspace = true }
tempfile = { workspace = true }
