[package]
name = "moves-nonroad-retrofit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "NonRoadRetrofit internal control strategy — retrofit emission-reduction programs for nonroad equipment, wired into the unified control-strategy framework (Phase 6 Task 123)."

[lib]
path = "src/lib.rs"

[dependencies]
moves-framework = { path = "../moves-framework" }
moves-nonroad = { path = "../moves-nonroad" }
