[package]
name = "moves-nonroad"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure-Rust port of EPA's NONROAD2008a nonroad-emissions model (Phase 5 skeleton)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "moves-nonroad"
path = "src/main.rs"

[dependencies]
thiserror = { workspace = true }
