[package]
name = "moves-nonroad"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "NONROAD2008a Rust port — batch emissions calculator (Phase 5). WASM-compatible."

[lib]
path = "src/lib.rs"

[[bin]]
name = "moves-nonroad"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
