[package]
name = "moves-nonroad"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure-Rust port of EPA's NONROAD2008a nonroad-emissions model (Phase 5 skeleton)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "moves-nonroad"
path = "src/main.rs"

[dependencies]
thiserror = { workspace = true }
ndarray = "0.15"

[dev-dependencies]
tempfile = { workspace = true }
# Task 115 numerical-fidelity harness (tests/nonroad_fidelity.rs) emits
# its divergence report as JSON for the Task 116 triage handoff and the
# fixture-suite CI artifact. Dev-only — the runtime library and its
# wasm32 build are untouched (ARCHITECTURE.md § 4.4).
serde = { workspace = true }
serde_json = { workspace = true }
