[package]
name = "moves-rate-of-progress"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Rate-of-Progress internal control strategy (Phase 6 Task 121)."

[lib]
path = "src/lib.rs"

[dependencies]
moves-framework = { path = "../moves-framework" }
serde = { workspace = true }
thiserror = { workspace = true }
csv = "1"

[dev-dependencies]
tempfile = { workspace = true }
