[package]
name = "moves-runspec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MOVES RunSpec parser, serializer, and TOML/XML converters (Phase 2 skeleton)."

[lib]
path = "src/lib.rs"

[dependencies]
quick-xml = { workspace = true }
thiserror = { workspace = true }
