[package]
name = "moves-snapshot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Canonical snapshot format for MOVES fixture outputs (Phase 0)."

[dependencies]
arrow = { workspace = true }
bytes = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
