[package]
name = "moves-snapshot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Canonical snapshot format for MOVES fixture outputs (Phase 0)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "moves-snapshot"
path = "src/main.rs"

[dependencies]
arrow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
