[package]
name = "moves-sql-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SQL macro expander and section-marker preprocessor for MOVES SQL scripts (documentation tool, not on runtime path). Task 22."

[lib]
path = "src/lib.rs"

[[bin]]
name = "moves-sql-expand"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
