[package]
name = "moves-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "WebAssembly entry point for the MOVES Rust port — Tasks 132 (onroad) and 133 (NONROAD)."

# cdylib: the browser-loadable .wasm module.
# lib: native unit tests (compiled without wasm-bindgen glue).
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# wasm-threads: enable rayon-backed Web Worker threading (Task 134).
#
# Requires a nightly Rust toolchain + atomics target features:
#   RUSTFLAGS="-C target-feature=+atomics,+bulk-memory,+mutable-globals" \
#   cargo +nightly build -Z build-std=std,panic_abort \
#     --target wasm32-unknown-unknown --features wasm-threads
#
# The page must be served with COEP/COOP cross-origin isolation headers
# so the browser exposes SharedArrayBuffer. See docs/wasm-threading.md.
[features]
wasm-threads = ["dep:wasm-bindgen-rayon"]

[dependencies]
moves-calculator-info = { path = "../moves-calculator-info" }
moves-calculators = { path = "../moves-calculators" }
moves-framework = { path = "../moves-framework" }
moves-nonroad = { path = "../moves-nonroad" }
moves-runspec = { path = "../moves-runspec" }
js-sys = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-rayon = { workspace = true, optional = true }

# parquet without C-compiled codecs so the WASM build does not require clang.
parquet = { version = "55", default-features = false, features = ["arrow", "base64"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
