[package]
name = "moves-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "WebAssembly entry point for the MOVES Rust port — Tasks 132 (onroad) and 133 (NONROAD)."

# cdylib: the browser-loadable .wasm module.
# lib: native unit tests (compiled without wasm-bindgen glue).
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# wasm-threads: enable rayon-backed Web Worker threading (Task 134).
#
# Requires a nightly Rust toolchain + atomics target features:
#   RUSTFLAGS="-C target-feature=+atomics,+bulk-memory,+mutable-globals" \
#   cargo +nightly build -Z build-std=std,panic_abort \
#     --target wasm32-unknown-unknown --features wasm-threads
#
# The page must be served with COEP/COOP cross-origin isolation headers
# so the browser exposes SharedArrayBuffer. See docs/wasm-threading.md.
[features]
wasm-threads = ["dep:wasm-bindgen-rayon"]

[dependencies]
moves-calculator-info = { path = "../moves-calculator-info" }
moves-calculators = { path = "../moves-calculators" }
moves-framework = { path = "../moves-framework" }
moves-nonroad = { path = "../moves-nonroad" }
moves-runspec = { path = "../moves-runspec" }
bytes = { workspace = true }
js-sys = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-rayon = { workspace = true, optional = true }

# parquet without C-compiled codecs so the WASM build does not require clang.
parquet = { version = "55", default-features = false, features = ["arrow", "base64"] }
# arrow IPC reader for wasm32-compatible execution-DB bundle parsing.
# arrow::ipc::reader::FileReader is pure-Rust and compiles on wasm32-unknown-unknown.
arrow = { workspace = true }

# polars-core for store-setup helpers (populate_link, build_runspec_tables, etc.).
# Wasm32 uses polars-core only (no lazy/parquet → no mio). Native uses full polars
# so the helpers can work with richer data. The helpers themselves only use core ops.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
polars = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
polars = { version = "0.53", default-features = false }
# Route Rust panics to console.error with a readable message + stack, so a
# panic surfaces its real cause instead of an opaque "RuntimeError: unreachable".
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
# Native-only (host) test deps for the default-DB canonical gate
# (default_db_canonical_diff). Tests run on the host, so these never reach the
# wasm32 target.
moves-snapshot = { path = "../moves-snapshot" }
tempfile = { workspace = true }
